tests/any2mochi/ex/group_by_left_join.ex.error
line 48: ** (SyntaxError) nofile:48:32: unexpected token: "\" (column 32, code point U+005C)
    |
 48 |   defp _query(src, joins, opts \ %{}) do
    |                                ^
    (stdlib 4.3.1.3) erl_eval.erl:744: :erl_eval.do_apply/7
    (elixir 1.14.0) lib/code.ex:422: Code.validated_eval_string/3
    47: 
>>> 48:   defp _query(src, joins, opts \ %{}) do
    49:   where = Map.get(opts, :where)
